--- a/package.json
+++ b/package.json
@@ -26,20 +26,24 @@
     "@reduxjs/toolkit": "^2.10.1",
     "axios": "^1.13.2",
     "i18next": "^25.6.2",
+    "moment": "^2.30.1",
     "or": "^0.2.0",
     "react": "19.1.1",
     "react-i18next": "^16.3.0",
     "react-native": "0.82.0",
     "react-native-calendars": "^1.1313.0",
+    "react-native-camera-kit": "^16.1.3",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-country-picker-modal": "^2.0.0",
+    "react-native-country-picker-modal": "^0.8.0",
     "react-native-date-picker": "^5.0.13",
+    "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
     "react-native-svg": "^15.15.0",
     "react-native-toast-message": "^2.3.3",
     "react-native-vector-icons": "^10.3.0",
+    "react-native-video": "^6.18.0",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
